5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1578_2897.log
== TEST (2019-03-20 08:51:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:51:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.21792
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
21
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:52:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*21)
-- OUTPUT:
2142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:52:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*21)
-- EXECUTION TIME:
0.167328
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2142
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2142
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:52:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*num)
-- OUTPUT:
212468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:52:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.139706
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
212468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:52:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*num)
-- OUTPUT:
212468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:53:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*"num")
-- OUTPUT:
21numnum
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:53:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*"num")
-- EXECUTION TIME:
0.142192
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
21numnum
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21numnum
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:35:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:35:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.207853
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
21
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:41:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
211234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:41:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.289936
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
211234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:45:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite um numero:"21))

# Impressao do dobro do numero
print(num)
-- ERROR:
File "XXXX", line 4
    num = int(input("digite um numero:"21))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:46:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:46:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.182351
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
21
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:47:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.12009
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
211234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:47:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
211234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:47:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.143163
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
211234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:48:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("21"))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:48:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("21"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.133499
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*num)
-- OUTPUT:
212468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:49:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*num)
-- EXECUTION TIME:
0.137431
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
212468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*21)
-- OUTPUT:
2142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*21)
-- OUTPUT:
2142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:49:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print(2*21)
-- EXECUTION TIME:
0.141666
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2142
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2142
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:50:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))

# Impressao do dobro do numero
print()
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:50:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.216279
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
10
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:45:21) 
-- CODE:
# Use este codigo como ponto de partida
var = int(num)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = int(num)
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:45:30) 
-- CODE:
# Use este codigo como ponto de partida
var = 
# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))

# Impressao do dobro do numero
print()
-- ERROR:
File "XXXX", line 2
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:49:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))
dobro=2*num
# Impressao do dobro do numero
print(dobro)
-- OUTPUT:
212468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:49:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))
dobro=2*num
# Impressao do dobro do numero
print(dobro)
-- OUTPUT:
212468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:49:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(21))
dobro=2*num
# Impressao do dobro do numero
print(dobro)
-- EXECUTION TIME:
0.208108
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
212468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
21888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:50:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())
dobro=2*num
# Impressao do dobro do numero
print(dobro)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:50:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())
dobro=2*num
# Impressao do dobro do numero
print(dobro)
-- EXECUTION TIME:
0.167518
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
